- Fixed bug #48057 (Only the date fields of the first row are fetched, others are empty)   patch by: info at programmiernutte dot net