ext/pdo_firebird/firebird_statement.c
@@ -363,7 +363,8 @@ static int firebird_stmt_get_col(pdo_stmt_t *stmt, int colno, char **ptr,  /* {{
 						fmt = S->H->timestamp_format ? S->H->timestamp_format : PDO_FB_DEF_TIMESTAMP_FMT;
 					}
 					/* convert the timestamp into a string */
-					*ptr = FETCH_BUF(S->fetch_buf[colno], char, *len = 80, NULL);
+					*len = 80;
+					*ptr = FETCH_BUF(S->fetch_buf[colno], char, *len, NULL);
 					*len = strftime(*ptr, *len, fmt, &t);
 					break;
 				case SQL_BLOB:
